# core/docs/swagger.json
@@ -23,12 +23,6 @@
                         "name": "X-Workspace-ID",
                         "in": "header",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Locale for translations (default: es)",
-                        "name": "locale",
-                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -6109,7 +6103,10 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 },
                 "order": {
                     "type": "integer"
@@ -6126,7 +6123,10 @@
                     "type": "string"
                 },
                 "description": {
-                    "type": "string"
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 },
                 "formatConfig": {
                     "$ref": "#/definitions/github_com_rendis_pdf-forge_core_internal_adapters_primary_http_dto.FormatConfigResponse"
@@ -6144,7 +6144,10 @@
                     "type": "string"
                 },
                 "label": {
-                    "type": "string"
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 },
                 "metadata": {
                     "type": "object",
